Update Day 5 transformations and actions