@@ -1,6 +1,21 @@
 name := "day5-transformations-actions"
+
 version := "0.1"
+
 scalaVersion := "2.12.18"
 
-libraryDependencies += "org.apache.spark" %% "spark-core" % "3.5.1"
-libraryDependencies += "org.apache.spark" %% "spark-sql" % "3.5.1"
+libraryDependencies ++= Seq(
+  "org.apache.spark" %% "spark-core" % "3.5.1",
+  "org.apache.spark" %% "spark-sql" % "3.5.1"
+)
+
+Compile / run / fork := true
+
+Compile / run / javaOptions ++= Seq(
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+)
